--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services: 
   cps542hw3: 
     build: https://github.com/meyersa/cps542hw3.git
-    container_name: nginx-meyersa 
+    container_name: cps542hw3
     restart: always
