reference to git instead of local

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services: 
   cps542hw3: 
-    build: .
+    build: https://github.com/meyersa/cps542hw3.git
     container_name: cps542hw3
     restart: always
     volumes:
